@@ -35,13 +35,11 @@ typedef struct _hiprtcProgram* hiprtcProgram;
 
 #define HIPRTC_API_CALL HIPRTCAPI
 
-typedef hiprtcResult  (HIPRTC_API_CALL *HIPRTC_HIPRTCADDNAMEEXPRESSION)  (hiprtcProgram, const char * const);
 typedef hiprtcResult  (HIPRTC_API_CALL *HIPRTC_HIPRTCCOMPILEPROGRAM)     (hiprtcProgram, int, const char * const *);
 typedef hiprtcResult  (HIPRTC_API_CALL *HIPRTC_HIPRTCCREATEPROGRAM)      (hiprtcProgram *, const char *, const char *, int, const char * const *, const char * const *);
 typedef hiprtcResult  (HIPRTC_API_CALL *HIPRTC_HIPRTCDESTROYPROGRAM)     (hiprtcProgram *);
 typedef hiprtcResult  (HIPRTC_API_CALL *HIPRTC_HIPRTCGETCODE)            (hiprtcProgram, char *);
 typedef hiprtcResult  (HIPRTC_API_CALL *HIPRTC_HIPRTCGETCODESIZE)        (hiprtcProgram, size_t *);
-typedef hiprtcResult  (HIPRTC_API_CALL *HIPRTC_HIPRTCGETLOWEREDNAME)     (hiprtcProgram, const char * const, const char **);
 typedef hiprtcResult  (HIPRTC_API_CALL *HIPRTC_HIPRTCGETPROGRAMLOG)      (hiprtcProgram, char *);
 typedef hiprtcResult  (HIPRTC_API_CALL *HIPRTC_HIPRTCGETPROGRAMLOGSIZE)  (hiprtcProgram, size_t *);
 typedef const char *  (HIPRTC_API_CALL *HIPRTC_HIPRTCGETERRORSTRING)     (hiprtcResult);
@@ -50,13 +48,11 @@ typedef struct hc_hiprtc_lib
 {
   hc_dynlib_t lib;
 
-  HIPRTC_HIPRTCADDNAMEEXPRESSION  hiprtcAddNameExpression;
   HIPRTC_HIPRTCCOMPILEPROGRAM     hiprtcCompileProgram;
   HIPRTC_HIPRTCCREATEPROGRAM      hiprtcCreateProgram;
   HIPRTC_HIPRTCDESTROYPROGRAM     hiprtcDestroyProgram;
   HIPRTC_HIPRTCGETCODE            hiprtcGetCode;
   HIPRTC_HIPRTCGETCODESIZE        hiprtcGetCodeSize;
-  HIPRTC_HIPRTCGETLOWEREDNAME     hiprtcGetLoweredName;
   HIPRTC_HIPRTCGETPROGRAMLOG      hiprtcGetProgramLog;
   HIPRTC_HIPRTCGETPROGRAMLOGSIZE  hiprtcGetProgramLogSize;
   HIPRTC_HIPRTCGETERRORSTRING     hiprtcGetErrorString;
